--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 		</dependency>
 	</dependencies>
 
+	<dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>1.1.0.Final</version>
+</dependency>
+
 	<build>
 		<plugins>
 			<plugin>
