Nova versão do projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-spring.datasource.url=jdbc:h2:mem:minhaloja
-spring.h2.console.enabled=true
+
+# BD
+spring.datasource.url=jdbc:postgresql://localhost:5432/lojadoperigo
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+server.port=9090
+
 # Limitando o tamanho dos arquivos para upload
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
